Fix User and Role Service